--- a/package.json
+++ b/package.json
@@ -72,7 +72,8 @@
     "@vitejs/plugin-basic-ssl": "^2.1.4",
     "@vitejs/plugin-react": "4.7.0",
     "tailwindcss": "4.1.12",
-    "vite": "6.3.5"
+    "typescript": "^5.9.3",
+    "vite": "^6.3.5"
   },
   "peerDependencies": {
     "react": "18.3.1",
